--- a/script.ipynb
+++ b/script.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,14 @@
     "\n",
     "# Model\n",
     "from strategies.rl import QLearning, RLStrategy, SARSA\n",
-    "from strategies.baselines import BestPosStrategy, StoikovStrategy"
+    "from strategies.baselines import BestPosStrategy, StoikovStrategy\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "np.random.seed(13425)\n",
+    "random.seed(13425)"
    ]
   },
   {
@@ -53,26 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading book and trade data concurrently...\n",
-      "--------------------------------------------------\n",
-      " Missing values for book :  0\n",
-      "--------------------------------------------------\n",
-      " Missing values for trades :  0\n",
-      "Data loaded in 82.94s\n",
-      "Computing market events concurrently...\n",
-      "Market events computed in 21.13s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "market_event = load_data(max_depth = 5)"
+    "market_event = load_data(max_depth = 5)\n",
+    "market_event_train = market_event[:1000000]\n",
+    "market_event_val = market_event[1000000:2000000]\n",
+    "market_event_test = market_event[2000000:]\n",
+    "\n",
+    "del market_event"
    ]
   },
   {
@@ -1037,11 +1034,11 @@
    ],
    "source": [
     "print(\n",
-    "    f\"Spread: {market_event[39].orderbook.asks[0][0] - market_event[39].orderbook.bids[0][0]:.3f}$\"\n",
+    "    f\"Spread: {market_event_train[39].orderbook.asks[0][0] - market_event_train[39].orderbook.bids[0][0]:.3f}$\"\n",
     ")\n",
     "\n",
-    "ask_prices, ask_sizes = zip(*market_event[39].orderbook.asks)\n",
-    "bid_prices, bid_sizes = zip(*market_event[39].orderbook.bids)\n",
+    "ask_prices, ask_sizes = zip(*market_event_train[39].orderbook.asks)\n",
+    "bid_prices, bid_sizes = zip(*market_event_train[39].orderbook.bids)\n",
     "\n",
     "# Create traces for asks and bids\n",
     "fig = make_subplots(rows=1, cols=2, subplot_titles=(\"Asks\", \"Bids\"), shared_yaxes=True)\n",
@@ -1078,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,37 +1119,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "ALPHA = 0.9\n",
     "ALPHA_DECAY = 0.9999\n",
     "GAMMA = 0.99\n",
-    "ORDER_BOOK_DEPTH = 5"
+    "ORDER_BOOK_DEPTH = 5\n",
+    "\n",
+    "NB_TRAINING = 5"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q learning\n"
+    "### Q learning\n",
+    "An ensemble methods is used to reduced the variance of the Q values. The Q values are calculated as the average of the Q values of the ensemble. The Q values are updated using the following formula:\n",
+    "\n",
+    "$$\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "46606\n",
-      "47945\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "QLearningTable = None\n",
     "\n",
@@ -1168,19 +1162,20 @@
     "    log=False,\n",
     ")\n",
     "\n",
-    "for _ in range(10):\n",
-    "    env = Real_Data_Env(market_event, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
-    "    strategy.run(env, \"train\", 1000000)\n",
+    "# Ensemble methods to reduce the variance of the Q-table\n",
+    "for i in range(NB_TRAINING):\n",
+    "    print(\"Training: {}/ {}\".format(i, NB_TRAINING))\n",
+    "    env = Real_Data_Env(market_event_train, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
+    "    strategy.run(env, \"train\", 1500000)\n",
     "\n",
     "    if QLearningTable is None:\n",
     "        QLearningTable = model.q_table\n",
     "    else:\n",
     "        QLearningTable += model.q_table\n",
-    "    \n",
+    "\n",
     "    strategy.reset()\n",
     "\n",
-    "QLearningTable /= 10\n",
-    "    "
+    "QLearningTable /= NB_TRAINING"
    ]
   },
   {
@@ -1189,11 +1184,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save\n",
     "strategy.model.q_table = QLearningTable\n",
+    "strategy.save_q_table(\"model/ensemble_qlearning_table.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(env.market_event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation runned for 135.81s                                                                                                                                                                           \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validation\n",
     "strategy.log = True\n",
-    "env = Real_Data_Env(market_event, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
+    "env = Real_Data_Env(market_event_val, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
+    "\n",
     "\n",
     "trades, market_updates, orders, updates = strategy.run(env, \"test\", 1000000)\n",
+    "\n",
     "evaluate_strategy(strategy, trades, updates, orders)"
    ]
   },
@@ -1224,7 +1249,7 @@
     ")\n",
     "\n",
     "for _ in range(10):\n",
-    "    env = Real_Data_Env(market_event, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
+    "    env = Real_Data_Env(market_event_train, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
     "    strategy.run(env, \"train\", 500000)\n",
     "\n",
     "    if SARSATable is None:\n",
