--- a/script.ipynb
+++ b/script.ipynb
@@ -60,9 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading book and trade data concurrently...\n",
+      "--------------------------------------------------\n",
+      " Missing values for book :  0\n",
+      "--------------------------------------------------\n",
+      " Missing values for trades :  0\n",
+      "Data loaded in 35.24s\n",
+      "Computing market events concurrently...\n",
+      "Market events computed in 15.46s\n"
+     ]
+    }
+   ],
    "source": [
     "market_event = load_data(max_depth = 5)\n",
     "market_event_train = market_event[:1000000]\n",
@@ -74,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,14 +1154,27 @@
     "An ensemble methods is used to reduced the variance of the Q values. The Q values are calculated as the average of the Q values of the ensemble. The Q values are updated using the following formula:\n",
     "\n",
     "$$\n",
-    "    "
+    "Q(s_t, a_t) = Q(s_t, a_t) + \\alpha * (r_t + \\gamma * \\max_{a} Q(s_{t+1}, a) - Q(s_t, a_t))\n",
+    "$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training: 0/ 5\n",
+      "Training: 1/ 5\n",
+      "Training: 2/ 5\n",
+      "Training: 3/ 5\n",
+      "Training: 4/ 5\n"
+     ]
+    }
+   ],
    "source": [
     "QLearningTable = None\n",
     "\n",
@@ -1163,7 +1191,7 @@
     ")\n",
     "\n",
     "# Ensemble methods to reduce the variance of the Q-table\n",
-    "for i in range(NB_TRAINING):\n",
+    "for i in range(1,NB_TRAINING+1):\n",
     "    print(\"Training: {}/ {}\".format(i, NB_TRAINING))\n",
     "    env = Real_Data_Env(market_event_train, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
     "    strategy.run(env, \"train\", 1500000)\n",
@@ -1180,46 +1208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save\n",
     "strategy.model.q_table = QLearningTable\n",
-    "strategy.save_q_table(\"model/ensemble_qlearning_table.npy\")"
+    "strategy.save_q_table(\"model/ensemble_Qlearning_table.npy\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "len(env.market_event)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation runned for 135.81s                                                                                                                                                                           \n"
-     ]
-    }
-   ],
-   "source": [
-    "# Validation\n",
-    "strategy.log = True\n",
-    "env = Real_Data_Env(market_event_val, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
+    "### SARSA\n",
+    "An ensemble methods is used to reduced the variance of the Q values. The Q values are calculated as the average of the Q values of the ensemble. The Q values are updated using the following formula:\n",
     "\n",
-    "\n",
-    "trades, market_updates, orders, updates = strategy.run(env, \"test\", 1000000)\n",
-    "\n",
-    "evaluate_strategy(strategy, trades, updates, orders)"
+    "$$\n",
+    "Q(s_t, a_t) = Q(s_t, a_t) + \\alpha * (r_t + \\gamma * Q(s_{t+1}, a_{t+1}))\n",
+    "$$"
    ]
   },
   {
@@ -1248,7 +1255,9 @@
     "    order_book_depth=ORDER_BOOK_DEPTH,\n",
     ")\n",
     "\n",
-    "for _ in range(10):\n",
+    "# Ensemble methods to reduce the variance of the Q-table\n",
+    "for i in range(1, NB_TRAINING + 1):\n",
+    "    print(\"Training: {}/ {}\".format(i, NB_TRAINING))\n",
     "    env = Real_Data_Env(market_event_train, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
     "    strategy.run(env, \"train\", 500000)\n",
     "\n",
@@ -1259,7 +1268,50 @@
     "\n",
     "    strategy.reset()\n",
     "\n",
-    "SARSATable /= 10"
+    "SARSATable /= NB_TRAINING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save\n",
+    "strategy.model.q_table = SARSATable\n",
+    "strategy.save_q_table(\"model/ensemble_SARSA_table.npy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validation\n",
+    "# TODO: execute the strategy wiht alpha different to avoid changeging the q table too much\n",
+    "model = QLearning(ALPHA, ALPHA_DECAY, GAMMA)\n",
+    "strategy = RLStrategy(\n",
+    "    model=model,\n",
+    "    min_position=MIN_POSITION,\n",
+    "    max_position=MAX_POSITION,\n",
+    "    delay=INTERVAL_BTW_ORDERS,\n",
+    "    trade_size=TRADE_SIZE,\n",
+    "    maker_fee=MAKER_FEE,\n",
+    "    order_book_depth=ORDER_BOOK_DEPTH,\n",
+    "    log=True,\n",
+    ")\n",
+    "env = Real_Data_Env(market_event_val, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
+    "\n",
+    "trades, market_updates, orders, updates = strategy.run(env, \"test\", 1500000)\n",
+    "evaluate_strategy(strategy, trades, updates, orders)"
    ]
   }
  ],
