--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,24 @@
    "metadata": {},
    "source": [
     "## Initialisation\n",
-    "Load the data from the input files, add some useful columns. Creation of the return at different horizons."
+    "Load the data from the input files, add some useful columns. Creation of the return at different horizons.\n",
+    "\n",
+    "The data used for this notebook is the [Crypto Lake website](https://crypto-lake.com/). The data contains the order book and the trades data for the \"BTC/USDT\" trading pair as well as the trades on the Binance exchange. It contains 20 price levels for each order book side for each timestamp(~850k) of the day \"1/10/2022\" and the trades that occured on that day (~2.5M). The data is stored in a queue and the last market event is fetch to simulate a real-time market data feed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.100061633\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data\n",
     "books = lakeapi.load_data(\n",
@@ -99,7 +109,9 @@
     "tick_val = books[\"received_time\"].diff().mean() / pd.Timedelta(seconds=1)  # seconds\n",
     "\n",
     "books[\"mid_price\"] = (books[\"ask_0_price\"] + books[\"bid_0_price\"]) / 2\n",
-    "books[\"spread\"] = books[\"ask_0_price\"] - books[\"bid_0_price\"]\n"
+    "books[\"spread\"] = books[\"ask_0_price\"] - books[\"bid_0_price\"]\n",
+    "\n",
+    "print(tick_val)"
    ]
   },
   {
