--- a/market_making.ipynb
+++ b/market_making.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
     "GAMMA = 0.99\n",
     "ORDER_BOOK_DEPTH = 5\n",
     "\n",
-    "NB_TRAINING = 5"
+    "NB_TRAINED_MODEL = 5"
    ]
   },
   {
@@ -263,8 +263,8 @@
     ")\n",
     "\n",
     "# Ensemble methods to reduce the variance of the Q-table\n",
-    "for i in range(1,NB_TRAINING+1):\n",
-    "    print(\"Training: {}/ {}\".format(i, NB_TRAINING))\n",
+    "for i in range(1,NB_TRAINED_MODEL+1):\n",
+    "    print(\"Training: {}/ {}\".format(i, NB_TRAINED_MODEL))\n",
     "    env = Real_Data_Env(market_event_train, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
     "    strategy.run(env, \"train\", 1500000)\n",
     "\n",
@@ -275,7 +275,7 @@
     "\n",
     "    strategy.reset()\n",
     "\n",
-    "QLearningTable /= NB_TRAINING\n",
+    "QLearningTable /= NB_TRAINED_MODEL\n",
     "\n",
     "# Save\n",
     "strategy.model.q_table = QLearningTable\n",
@@ -336,8 +336,8 @@
     ")\n",
     "\n",
     "# Ensemble methods to reduce the variance of the Q-table\n",
-    "for i in range(1, NB_TRAINING + 1):\n",
-    "    print(\"Training: {}/ {}\".format(i, NB_TRAINING))\n",
+    "for i in range(1, NB_TRAINED_MODEL + 1):\n",
+    "    print(\"Training: {}/ {}\".format(i, NB_TRAINED_MODEL))\n",
     "    env = Real_Data_Env(market_event_train, EXECUTION_DELAY, MARKET_EVENT_DELAY)\n",
     "    strategy.run(env, \"train\", 500000)\n",
     "\n",
@@ -348,7 +348,7 @@
     "\n",
     "    strategy.reset()\n",
     "\n",
-    "SARSATable /= NB_TRAINING\n",
+    "SARSATable /= NB_TRAINED_MODEL\n",
     "\n",
     "# Save\n",
     "strategy.model.q_table = SARSATable\n",
